# labOptimal

./: .gitignore  README.md  TASKS.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: api-contract.md  nutrient-dossiers.md  reference-ranges.md
docs/brand/: README.md  direction-board.html  tokens.css
services/api/: .env.example  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
services/engine/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/engine/src/laboptimal_engine/: __init__.py  models.py  pipeline.py  service.py
services/engine/src/laboptimal_engine/data/: __init__.py  reference_ranges.py
services/engine/src/laboptimal_engine/deficiency/: __init__.py  detector.py
services/engine/src/laboptimal_engine/dossiers/: __init__.py  library.py
services/engine/src/laboptimal_engine/mealplan/: __init__.py  generator.py
services/engine/src/laboptimal_engine/normalize/: __init__.py  normalizer.py
services/engine/src/laboptimal_engine/ocr/: __init__.py  base.py
services/engine/src/laboptimal_engine/parsing/: __init__.py  lab_parser.py
services/engine/src/laboptimal_engine/recommend/: __init__.py  recommender.py  usda_client.py
services/engine/tests/: test_depth.py  test_dossiers.py  test_golden.py  test_mealplan.py  test_pipeline.py
services/engine/tests/fixtures/: expected_protocol.json  sample_panel.txt
services/mobile/: .gitignore  App.tsx  README.md  app.json  babel.config.js  index.ts  jest.config.cjs  metro.config.js  package-lock.json  package.json  tsconfig.json
(+56 files in other folders)
